# api/handler/user.go
@@ -1,0 +1,112 @@
+package handler
+
+import (
+	"app/api/models"
+	"context"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Create User godoc
+// @ID create_user
+// @Router /user [POST]
+// @Summary Create User
+// @Description Create User
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user body models.CreateUser true "CreateUserRequest"
+// @Success 201 {object} Response{data=string} "Success Request"
+// @Response 400 {object} Response{data=string} "Bad Request"
+// @Failure 500 {object} Response{data=string} "Server Error"
+func (h *Handler) CreateUsera(c *gin.Context) {
+
+	var createUser models.CreateUser
+
+	err := c.ShouldBindJSON(&createUser) // parse req body to given type struct
+	if err != nil {
+		h.handlerResponse(c, "create user", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	id, err := h.storages.User().Create(context.Background(), &createUser)
+	if err != nil {
+		h.handlerResponse(c, "storage.user.create", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	resp, err := h.storages.User().GetByID(context.Background(), &models.UserPrimaryKey{UserId: id})
+	if err != nil {
+		h.handlerResponse(c, "storage.user.getByID", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	h.handlerResponse(c, "create user", http.StatusCreated, resp)
+}
+
+// Get By ID User godoc
+// @ID get_by_id_user
+// @Router /user/{id} [GET]
+// @Summary Get By ID User
+// @Description Get By ID User
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id path string true "id"
+// @Success 200 {object} Response{data=string} "Success Request"
+// @Response 400 {object} Response{data=string} "Bad Request"
+// @Failure 500 {object} Response{data=string} "Server Error"
+func (h *Handler) GetByIdUser(c *gin.Context) {
+
+	id := c.Param("id")
+
+	resp, err := h.storages.User().GetByID(context.Background(), &models.UserPrimaryKey{UserId: id})
+	if err != nil {
+		h.handlerResponse(c, "storage.customer.getByID", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	h.handlerResponse(c, "get user by id", http.StatusCreated, resp)
+}
+
+// Get List User godoc
+// @ID get_list_user
+// @Router /user [GET]
+// @Summary Get List User
+// @Description Get List User
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param offset query string false "offset"
+// @Param limit query string false "limit"
+// @Param search query string false "search"
+// @Success 200 {object} Response{data=string} "Success Request"
+// @Response 400 {object} Response{data=string} "Bad Request"
+// @Failure 500 {object} Response{data=string} "Server Error"
+func (h *Handler) GetListUser(c *gin.Context) {
+
+	offset, err := h.getOffsetQuery(c.Query("offset"))
+	if err != nil {
+		h.handlerResponse(c, "get list user", http.StatusBadRequest, "invalid offset")
+		return
+	}
+
+	limit, err := h.getLimitQuery(c.Query("limit"))
+	if err != nil {
+		h.handlerResponse(c, "get list user", http.StatusBadRequest, "invalid limit")
+		return
+	}
+
+	resp, err := h.storages.User().GetList(context.Background(), &models.GetListUserRequest{
+		Offset: offset,
+		Limit:  limit,
+		Search: c.Query("search"),
+	})
+	if err != nil {
+		h.handlerResponse(c, "storage.user.getlist", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	h.handlerResponse(c, "get list user response", http.StatusOK, resp)
+}
